--- a/teste-front/src/css/quasar.variables.scss
+++ b/teste-front/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #02295d;
-$secondary: #26a69a;
+$secondary: #423bfd;
 $accent: #9c27b0;
 
 $dark: #1d1d1d;
