--- a/teste-front/src/global.css
+++ b/teste-front/src/global.css
@@ -4,10 +4,22 @@
 
 @font-face {
   font-family: "Ubuntu", sans-serif;
-  src: url(./assets/fonts/Ubuntu-Regular.ttf);
+  src: url(../src/fonts/Ubuntu-Regular.ttf);
 }
 
 body {
   background-color: #eef5ff;
   font-family: "Ubuntu", sans-serif;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: blue;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
